# mock-loop

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  app.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: da82a63989d2_add_session_id_to_interviews_table.py
backend/app/: __init__.py  config.py  main.py
backend/app/database/: __init__.py  connection.py  models.py
backend/app/routers/: __init__.py  code_execution.py  interviews.py  sessions.py
backend/app/services/: __init__.py  mock_ai.py
frontend/: .eslintrc.json  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/coach-review/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/features/: page.tsx
frontend/src/app/interview-room/: page.tsx
frontend/src/app/interview-studio/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/scorecards/: page.tsx
frontend/src/app/weekend-sprint/: page.tsx
frontend/src/components/: AppLayout.tsx  AppSidebar.tsx  AuthProvider.tsx  ClientLayout.tsx  CodeEditor.tsx  FeedbackPanel.tsx  InterviewConfigurator.tsx  InterviewWorkspace.tsx  LeftSidebar.tsx  PromptPanel.tsx  RightSidebar.tsx  TopNav.tsx  TranscriptLog.tsx
frontend/src/components/pages/: DashboardPage.tsx  InterviewRoomPage.tsx  InterviewStudioPage.tsx  LoginPage.tsx
frontend/src/lib/: api.ts
scripts/: init-db.sql
(+1 files in other folders)
